--- a/app/src/main/res/layout/custom_dialog.xml
+++ b/app/src/main/res/layout/custom_dialog.xml
@@ -62,6 +62,21 @@
                 android:textStyle="bold">
 
             </TextView>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/input_background"
+                android:padding="10dp"
+                android:layout_marginTop="10dp"
+                android:id="@+id/task_input_priority"
+                android:text="Select your task priority"
+                android:textColor="@color/black"
+                android:drawableRight="@drawable/ic_down"
+
+                android:textSize="16sp"
+                android:textStyle="bold">
+
+            </TextView>
             <androidx.appcompat.widget.AppCompatButton
                 android:layout_width="match_parent"
                 android:layout_height="55dp"
