task priority management added

--- a/app/src/main/res/layout/row_task.xml
+++ b/app/src/main/res/layout/row_task.xml
@@ -56,6 +56,20 @@
                         >
 
                     </TextView>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Task priority"
+                        android:background="@drawable/blue_background"
+                        android:id="@+id/task_priority"
+                        android:textSize="14sp"
+                        android:layout_marginLeft="8dp"
+                        android:textStyle="bold"
+                        android:padding="8dp"
+                        android:textColor="@color/white"
+                        >
+
+                    </TextView>
 
                 </LinearLayout>
 
